# tree-sitter-rust

./: Cargo.toml  grammar.js
corpus/: declarations.txt  expressions.txt  macros.txt  patterns.txt
src/: grammar.json  node-types.json
